--- a/src/views/auth/auth.module.css
+++ b/src/views/auth/auth.module.css
@@ -77,6 +77,11 @@
   outline: none;
 }
 
+.small a:hover {
+  color: #999999;
+  text-decoration: underline;
+}
+
 .auth-opt {
   color: #999999;
   font-size: 13px;
@@ -90,9 +95,9 @@
   outline: none;
 }
 
-.small a:hover,
 .auth-opt a:hover {
-    text-decoration: underline;
+  color: #efc81a;
+  text-decoration: underline;
 }
 
 @media only screen and (max-width: 540px){
