--- a/src/components/module/card/card.module.css
+++ b/src/components/module/card/card.module.css
@@ -21,3 +21,9 @@
     font-size: 26px;
     font-weight: 500;
 }
+
+@media only screen and (max-width: 600px) {
+    .card {
+        margin: 20px 0 0 0;
+    }
+}
