--- a/src/components/module/navi/navi.module.css
+++ b/src/components/module/navi/navi.module.css
@@ -1,18 +1,73 @@
 .navi {
-    min-height: 80px;
-    background-color: #ffffff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  min-height: 80px;
+  background-color: transparent;
+  transition: 0.5s;
 }
 
-.navi a,
-.navi a:focus {
-    text-decoration: none;
-    color: #2E266F;
-    font-size: 18px;
-    font-weight: 500;
-    outline: none;
+.background {
+  background-color: #ffffff !important;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
 }
 
-.navi a:hover {
-    text-decoration: underline;
+.font {
+  color: #2e266f !important;
+  transition: ease-in-out 0.5s;
+}
+
+.appliname {
+  display: none;
+  color: #2e266f;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.toggler {
+  margin-right: 30px;
+}
+
+.navlink,
+.navlink:focus {
+  text-decoration: none;
+  color: #2e266f;
+  font-size: 18px;
+  font-weight: 500;
+  margin-right: 25px;
+  outline: none;
+}
+
+.login-link,
+.login-link:focus {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 500;
+  outline: none;
+  transition: 0.5s;
+}
+
+.navlink:hover {
+  text-decoration: underline;
+  color: #2e266f;
+}
+
+.login-link:hover {
+  text-decoration: underline;
+  color: #ffffff;
+}
+
+@media only screen and (max-width: 600px) {
+  .appliname {
+    display: block;
+    margin-left: 30px;
+    margin-top: 10px;
+  }
+
+  .navlink {
+    margin-right: 0;
+  }
+
+  .login-link {
+    color: #2e266f;
+  }
 }
