--- a/src/components/module/card/card.module.css
+++ b/src/components/module/card/card.module.css
@@ -6,6 +6,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-right: 20px;
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
 .card img {
