--- a/src/components/module/myCard/mycard.module.css
+++ b/src/components/module/myCard/mycard.module.css
@@ -10,11 +10,13 @@
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
+  cursor: pointer;
 }
 
 .mycard-img img {
   width: 350px;
   height: 250px;
+  aspect-ratio: 1;
   object-fit: cover;
   border: 0;
   border-radius: 8px;
